syntax = "proto3";


package agents;


// option java_multiple_files = true;

// import "google/protobuf/struct.proto";

// ***** Default Objects ***** //
message DefaultObject {
  string id = 1;
  string prefix = 2;
  string desc = 3;
  string code = 4;
  string ref = 5;
  string type = 6;
  string tag = 7;
  string group_id = 8;
  string secret = 9;
  string status = 10;
  string merchant_code = 11;
  bool auto_deposit = 12;
  bool auto_withdraw = 13;
  string created_at = 14;
  string updated_at = 15;
}
// ***** Default Objects ***** //


// ***** Default Status Response ***** //
message StatusResponse {
  bool successful = 1;
  int32 code = 2;
  string message = 3;
}
// ***** Default Status Response ***** //

// ***** RequestResponse Insert ***** //
message InsertRequest {
  InsertRequestObject request = 1;
}

message InsertRequestObject {
  string code = 1;
  string tag = 2;
  string type = 3;
  string ref = 4;
  string secret = 5;
  string desc = 6;
  string status = 7;
  string created_at = 8;
  string prefix = 9;
  string group_id = 11;
  string merchant_code = 12;
  bool auto_deposit = 13;
  bool auto_withdraw = 14;
}

message InsertResponse {
  InsertResponseObject response = 1;
}

message InsertResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     DataInsertResponseObject data = 2;
  }
}

message DataInsertResponseObject {
  repeated DefaultObject raw = 1; 
}

message DataRawInsertResponseObject {
  string id = 1;
}
// ***** RequestResponse Insert ***** //



// ***** RequestResponse FindOne ***** //
message FindOneRequest {
  FindOneRequestObject request = 1;
}

message FindOneRequestObject{
  DefaultObject where = 1;
}

message FindOneResponse {
  FindOneResponseObject response = 1;
}

message FindOneResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     DefaultObject data = 2;
  }
}

// ***** RequestResponse FindOne ***** //


// ***** RequestResponse FindAll ***** //
message FindAllRequest {
  FindAllRequestObject request = 1;
}

message FindAllRequestObject{
  DefaultObject where = 1;
}

message FindAllResponse {
  FindAllResponseObject response = 1;
}

message FindAllResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
  }
  repeated DefaultObject data = 2;
}

// ***** RequestResponse FindAll ***** //


// ***** RequestResponse FindAllWhere ***** //
message FindAllWhereRequest {
  string request = 1;
}

message FindAllWhereRequestObject{
  map<string,string> where = 1;
  FindOptions options = 2;
  repeated string args = 3;
}

message FindAllWhereResponse {
  FindAllWhereResponseObject response = 1;
}

message FindAllWhereResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
  }
  repeated DefaultObject data = 2;
}

message FindOptions {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
}
// ***** RequestResponse FindAllWhere ***** //


// ***** RequestResponse Update ***** //
message UpdateRequest {
  DefaultObject request = 1;
  DefaultObject update = 2;
}

message UpdateResponse {
  UpdateResponseObject response = 1;
}

message UpdateResponseObject {
  oneof ResponseType 
  {
      StatusResponse status = 1;
      DataUpdateResponseObject data = 2;
  }
}

message DataUpdateResponseObject{
  repeated DefaultObject raw = 1;
  int32 affected = 2;
}
// ***** RequestResponse Update ***** //

// ***** RequestResponse Delete ***** //
message DeleteRequest {
  DefaultObject request = 1;
}

message DeleteObject {
  string id = 1;
}

message DeleteResponse {
  DeleteResponseObject response = 1;
}

message DeleteResponseObject {
  oneof ResponseType 
  {
      StatusResponse status = 1;
      DataDeleteResponseObject data = 2;
  }
}

message DataDeleteResponseObject{
  repeated DefaultObject raw = 1;
  int32 affected = 2;
}
// ***** RequestResponse Delete ***** //


// ***** RequestResponse Count ***** //
message CountRequest {
  CountRequestObject request = 1;
}

message CountRequestObject {
  DefaultObject where = 1;
}

message CountResponse {
  CountResponseObject response = 1;
}

message CountResponseObject {
  oneof ResponseType 
  {
    StatusResponse status = 1;
    DataCountResponseObject data = 2;
  }
}

message DataCountResponseObject {
  int32 count = 1;
}
// ***** RequestResponse Count ***** //


// ***** RequestResponse CountAllWhere ***** //
message CountAllWhereRequest {
  string request = 1;
}

message CountAllWhereRequestObject {
  DefaultObject where = 1;
  CountOptions options = 2;
  repeated string args = 3;
}

message CountAllWhereResponse {
  CountAllWhereResponseObject response = 1;
}

message CountAllWhereResponseObject {
  oneof ResponseType 
  {
    StatusResponse status = 1;
    DataCountAllWhereResponseObject data = 2;
  }
}

message DataCountAllWhereResponseObject {
  int32 count = 1;
}

message CountOptions {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
}
// ***** RequestResponse CountAllWhere ***** //


service AgentsService {
  rpc Insert (InsertRequest) returns (InsertResponse) {}
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
  rpc FindAll (FindAllRequest) returns (FindAllResponse) {}
  rpc FindAllWhere (FindAllWhereRequest) returns (FindAllWhereResponse) {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
  rpc Count (CountRequest) returns (CountResponse) {}
  rpc CountAllWhere (CountAllWhereRequest) returns (CountAllWhereResponse) {}
}

